tests/NormalTests/paczka1/small_fuzzy/40300416.err
Error in line 2: kq2 S652 68,7
Error in line 6: TPVyiu S67 32,4
Error in line 7: TPVyiu A122 95,0
Error in line 4: aNSM A122 568,3
Error in line 5: kq2 S437 37,8
